# voicemynews

./: .gitignore  .gitmodules  README.md  package.json  voicemynews.sublime-project  voicemynews.sublime-workspace
doc/: analytics-layer.md  technical_summary.md
doc/uml/: VoiceMyNews.vpp  analytics-layer.gliffy
src/android/: README.md
src/android/VoiceMyNews/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
src/android/VoiceMyNews/app/src/androidTest/java/com/voicemynews/voicemynews/: ExampleInstrumentedTest.java
src/android/VoiceMyNews/app/src/main/: AndroidManifest.xml
src/android/VoiceMyNews/app/src/main/assets/: js
src/android/VoiceMyNews/app/src/main/cpp/: JsApp.cpp  JsApp.h  V8HelloWorld.cpp  V8HelloWorld.h
src/android/VoiceMyNews/app/src/main/cpp/bindings/: RequireBinding.cpp  RequireBinding.h
src/android/VoiceMyNews/app/src/main/cpp/bindings/analytics/: AnalyticsBinding.cpp  AnalyticsBinding.h  WebBrowserBinding.cpp  WebBrowserBinding.h
src/android/VoiceMyNews/app/src/main/cpp/bindings/config/: ConfigBinding.cpp  ConfigBinding.h
src/android/VoiceMyNews/app/src/main/cpp/bindings/events/: EventDataBinding.cpp  EventDataBinding.h  EventLoopBinding.cpp  EventLoopBinding.h  EventLoopPlatform.cpp  EventLoopPlatform.h  NavigationBinding.cpp  NavigationBinding.h
src/android/VoiceMyNews/app/src/main/cpp/bindings/network/: HttpClientBinding.cpp  HttpClientBinding.h
src/android/VoiceMyNews/app/src/main/cpp/bindings/news/: VoiceBinding.cpp  VoiceBinding.h
src/android/VoiceMyNews/app/src/main/cpp/io/fs/: FileUtilsPlatform.cpp  FileUtilsPlatform.h
src/android/VoiceMyNews/app/src/main/cpp/utils/: DataWrapper.h  StringHelpers.h
src/android/VoiceMyNews/app/src/main/java/com/voicemynews/core/bindings/analytics/: Analytics.java  WebBrowserWrapper.java
src/android/VoiceMyNews/app/src/main/java/com/voicemynews/core/bindings/config/: Config.java
src/android/VoiceMyNews/app/src/main/java/com/voicemynews/core/bindings/events/: EventDataBinding.java  EventDataBindingNative.java  EventHandler.java  EventLoopBinding.java  EventLoopBindingNative.java  EventNames.java  NavigationBinding.java
src/android/VoiceMyNews/app/src/main/java/com/voicemynews/core/bindings/network/: HttpClientBinding.java  HttpClientBindingGetAction.java  HttpClientBindingParseStringContentAction.java  HttpClientBindingParsedResponseAbstract.java  HttpClientBindingParsedStringResponse.java
src/android/VoiceMyNews/app/src/main/java/com/voicemynews/core/bindings/news/: VoiceSupport.java  VoiceSupportActions.java  VoiceSupportAndroid.java
src/android/VoiceMyNews/app/src/main/java/com/voicemynews/core/models/: JsonArrayAdapter.java
src/android/VoiceMyNews/app/src/main/java/com/voicemynews/voicemynews/: App.java  AppLoaderActivity.java  AppStartActivity.java  CategoriesPreferencesActivity.java  GeniusNewsActivity.java  IndividualNewsActivity.java  JsApp.java  MainActivity.java  MainPageAppActivity.java  UserPreferencesActivity.java
src/android/VoiceMyNews/app/src/main/java/com/voicemynews/voicemynews/components/: CategoriesPreferencesFragment.java  GeniusNewsFragment.java  IndividualNewsFragment.java  MainMenuView.java
src/android/VoiceMyNews/app/src/main/java/com/voicemynews/voicemynews/models/: JsonArrayAdapter.java  JsonArrayIterator.java  SideMenuState.java
src/android/VoiceMyNews/app/src/main/java/com/voicemynews/voicemynews/utils/: DownloadImageAsync.java  ImageHelper.java  JsResourcesHelper.java  Tasks.java
src/android/VoiceMyNews/app/src/main/res/layout/: activity_app_start.xml  activity_categories_preferences.xml  activity_genius_news.xml  activity_individual_news.xml  activity_main.xml  app_side_menu.xml  fragment_categories_listing_column.xml  fragment_categories_preferences.xml  fragment_genius_news.xml  fragment_individual_news.xml  fragment_individual_news_contributed_by.xml  fragment_individual_news_paragraphs.xml  genius_news_listing.xml  view_main_menu.xml
src/android/VoiceMyNews/app/src/main/res/values/: attrs_categories_preferences.xml  attrs_main_menu_view.xml  colors.xml  dimens.xml  integers.xml  strings.xml
src/android/VoiceMyNews/app/src/test/java/com/voicemynews/voicemynews/: ExampleUnitTest.java
src/android/VoiceMyNews/core/: CMakeLists.txt  build.gradle
src/android/VoiceMyNews/core/src/androidTest/java/com/voicemynews/core/: ExampleInstrumentedTest.java
src/android/VoiceMyNews/core/src/main/: AndroidManifest.xml
src/android/VoiceMyNews/core/src/main/cpp/bindings/events/: EventLoopBinding.cpp  EventLoopBinding.h
src/android/VoiceMyNews/core/src/main/java/com/voicemynews/core/bindings/events/: EventHandler.java  EventLoopBindingNative.java
src/android/VoiceMyNews/core/src/test/java/com/voicemynews/core/: ExampleUnitTest.java
src/core/: CMakeLists.txt  README.md
src/core/analytics/: Analytics.cpp  Analytics.h  AnalyticsConstants.h  WebBrowser.h
src/core/config/: Config.h  ConfigDev.cpp  ConfigProd.cpp
src/core/events/: EventData.h  EventLoop.cpp  EventLoop.h  EventNames.h
src/core/io/fs/: FileUtils.cpp  FileUtils.h  Require.cpp  Require.h
src/core/io/fs/exceptions/: FileNotFoundException.cpp  FileNotFoundException.h
src/core/js/: README.md  app.js  require.js
src/core/js/analytics/: analytics_constants.js  analytics_logic.js
src/core/js/events/: event_names.js  navigation.js
src/core/js/exceptions/: exceptions_factory.js  invalid_argument.js  invalid_playback.js  invalidnews.js  notimplemented.js
src/core/js/html/analytics/: analytics-tracking-dev.html  analytics-tracking-prod.html  analytics.js  app.html
src/core/js/menu/: menu_data.json  menu_logic.js
src/core/js/networking/: http.js
src/core/js/news/: categories_data.json  categories_logic.js  news_datasource.js  news_logic.js  voice_logic.js  voice_playlist_logic.js
src/core/js/news/data/: news_categ_1.json  news_categ_11.json  news_categ_9.json
src/core/js/news/datasources/: cnn_news_datasource.js  html_helper.js
src/core/js/users/: preferences_logic.js
src/core/network/: HttpClientInterface.h
src/core/voice/: VoiceSupport.cpp  VoiceSupport.h
(+164 files in other folders)
